--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -55,6 +55,7 @@
 *::after {
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
   font-weight: normal;
 }
 
@@ -83,4 +84,13 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+.pd-10px{
+  padding: 10px;
+}
+.pd-left-5px{
+  padding-left: 5px;
+}
+.mt-13px{
+  margin-top: 13px;
 }
